--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,6 +10,7 @@
         "elysia": "latest",
         "knex": "latest",
         "mysql": "^2.18.1",
+        "node-opengauss": "^1.1.0",
         "pg": "^8.12.0"
     },
     "devDependencies": {
