--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,7 @@
         "dev": "bun run --watch src/index.ts"
     },
     "dependencies": {
+        "@elysiajs/cors": "^1.1.1",
         "better-sqlite3": "^11.2.1",
         "elysia": "latest",
         "knex": "latest",
