--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "mermaid": "^11.1.1",
         "pinia": "^2.1.7",
         "vue": "^3.4.29",
         "vue-router": "^4.3.3"
