--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
         "@rushstack/eslint-patch": "^1.8.0",
         "@tsconfig/node20": "^20.1.4",
         "@types/node": "^20.14.5",
+        "@vicons/ionicons5": "^0.12.0",
         "@vitejs/plugin-vue": "^5.0.5",
         "@vitejs/plugin-vue-jsx": "^4.0.0",
         "@vue/eslint-config-prettier": "^9.0.0",
