--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "type": "module",
     "scripts": {},
     "dependencies": {
-        "axios": "^1.7.7",
-        "radash": "^12.1.0",
         "@root/models": "workspace:^",
-        "@root/shared": "workspace:^"
+        "@root/shared": "workspace:^",
+        "axios": "^1.7.7",
+        "lodash": "^4.17.21",
+        "radash": "^12.1.0"
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.17.7"
     }
 }
