--- a/packages/client/tsconfig.app.json
+++ b/packages/client/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
     "extends": "@vue/tsconfig/tsconfig.dom.json",
-    "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../../config.ts"],
+    "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../../config/client.config.ts"],
     "exclude": ["src/**/__tests__/*"],
     "compilerOptions": {
         "composite": true,
@@ -8,7 +8,7 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"],
-            "@root/*": ["../../*"]
+            "@config": ["../../config/client.config.ts"]
         }
     }
 }
