--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,9 @@
         "dev": "bun run --watch src/index.ts"
     },
     "dependencies": {
+        "@elysiajs/bearer": "^1.1.2",
         "@elysiajs/cors": "^1.1.1",
+        "@elysiajs/jwt": "^1.1.1",
         "better-sqlite3": "^11.2.1",
         "elysia": "latest",
         "knex": "latest",
