fix(server): 修复构建脚本路径问题

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.50",
     "type": "module",
     "scripts": {
-        "compile": "bun build --compile src/index.ts --outfile=/dist/server",
-        "bundle": "bun build --target node src/index.ts --outfile=/dist/server.js",
+        "compile": "bun build --compile src/index.ts --outfile=./dist/server",
+        "bundle": "bun build --target node src/index.ts --outfile=./dist/server.js",
         "dev": "bun run --watch src/index.ts"
     },
     "dependencies": {
